Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23067

Windows : manually registered services (mysqld --install) might not be recognized by mysql_upgrade_service

    XMLWordPrintable

Details

    Description

      C:\work\10.1\xxx\sql\Debug>mysqld --install foo
      Service successfully installed.

      C:\work\10.1\xxx\sql\Debug>mysql_upgrade_service --service=foo
      Phase 1/8: Changing service configuration
      FATAL ERROR: Not a valid MySQL service

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.