MDEV-23067 Windows : manually registered services rejected mysql_upgrade_service

- service not using "--defaults-file" can have any name not just "MySQL"
- service with "--defaults-file", without datadir in them
use default datadir (install_root\data)